2003-07-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* proc.c :

	  - Added error pipe messages.

	* mod_vlad.h :

	  - Added basic error codes.

	* config.h.in :
	* configure :
	* configure.ac :

	  - Added a config.h in for variables version and debug.

2003-07-04  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* admin.c :
	* mod_vlad.c :
	* mod_vlad.h :
	* proc.c :
	* proc.h :
	* util.c :
	* util.h :

	  - Added pipes, forks, mutex's, polls and other trickery to allow
	    the module to work in a multi-process environment. VERY messy.

2003-07-03  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* proc.c :
	* proc.h :

	  - Added file that will handle ipc's.

2003-07-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* mod_vlad.c :

	  - Including unistd.h causes warnings because that file and
	    pthread.h both declares pthread_atfork(). Since the only thing we
	    need is getppid(), we explicity declare it.

2003-07-01  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :

	  - Fixed dependencies.

	* admin.c :
	* admin.h :
	* mod_vlad.c :
	* mod_vlad.h :
	* util.c :
	* util.h :

	  - Moved macros and config_rec to mod_vlad.h.

	  - Little cleanup.

	* mod_vlad.c :
	* policy.l :
	* util.c :
	* util.h :

	  - Separated config directives into 3: userfile, policyfile and enable.

	  - Tons of cleanup.

	* mod_vlad.c :

	  - Module now forces a WWW-Authenticate header even without the
	    per-dir "AuthName" and "AuthType" directives.

	* ChangeLog :

	  - Changelog stated.