@@ -263,6 +263,12 @@ const char *modvlad_docroot(apr_pool_t *a_p, server_rec *a_s)
   return apr_pstrdup(a_p, conf->ap_document_root);
 }
 
+/* generates a random id between 0 and MODVLAD_MAXID */
+unsigned int modvlad_idgen()
+{
+  return (unsigned int) 1.0 + (MODVLAD_MAXID * rand() / (RAND_MAX + 1.0));
+}
+
 /* register the users into the kb */
 static int add_subject(apr_pool_t *a_p, void *a_kb, const char *a_fname)
 {
